--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2156,10 +2156,10 @@
 			}
 
 			.image.icon:hover:before {
-				-moz-transform: translateZ(1em);
+				/* -moz-transform: translateZ(1em);
 				-webkit-transform: translateZ(1em);
 				-ms-transform: translateZ(1em);
-				transform: translateZ(1em);
+				transform: translateZ(1em); */
 			}
 
 			.image.icon:hover:after {
@@ -2544,7 +2544,7 @@
 
 			#header a:hover {
 				border-bottom-color: transparent;
-				color: #4eb980;
+				color: #0065d1;
 			}
 
 		#header strong, #header b {
@@ -2564,7 +2564,7 @@
 		}
 
 		#header .logo {
-			background: #4eb980;
+			background: #ffffff;
 			border-radius: 100%;
 			color: #ffffff;
 			cursor: default;
@@ -2574,13 +2574,20 @@
 			line-height: 2.35em;
 			margin: 0 0 0.75em 0;
 			text-align: center;
-			width: 2.35em;
+      width: 2.35em;
+
 		}
 
 			#header .logo.fa-paper-plane-o:before {
 				left: -0.075em;
 				position: relative;
-			}
+      }
+
+      #header .logo img{
+        display: inline-block;
+        width: 100%;
+        border-radius: 50%;
+      }
 
 		#header h1 {
 			font-size: 2.5em;
@@ -2597,7 +2604,7 @@
 
 	#footer {
 		background-attachment: scroll;
-		background-color: #4eb980;
+		background-color: #0065d1;
 		background-image: url("images/bottom-3200.svg");
 		background-position: top center;
 		background-repeat: repeat-x;
@@ -2648,7 +2655,7 @@
 		#footer .button {
 			background: #ffffff;
 			box-shadow: inset 0 0 0 1px #ffffff;
-			color: #4eb980;
+			color: #0065d1;
 		}
 
 			#footer input[type="submit"]:hover,
