--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2168,9 +2168,12 @@
   .quote-author{
     float: right;
   }
-
+  .about-image{
+    text-align: center;
+  }
   .about-image img{
-    width: 100%;
+    width: 80%;
+    border: 1px solid #ddd;
   }
   .about-image:after{
     background: none;
